--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,34 @@ jobs:
           command: |
             poetry run pysen run lint
 
+  validate-version-with-tag:
+    docker:
+      - image: python:3-buster
+        auth: *docker-hub-auth
+    steps:
+      - checkout
+      - poetry-install
+      - run:
+          name: Check if git tag name is appropriate for package version
+          command: |
+            TAG=$(echo ${CIRCLE_TAG} |sed -e 's/onnigiri-//')
+            VERSION=$(poetry run python -c 'import pkg_resources; print(pkg_resources.get_distribution("onnigiri").version)')
+            echo "Git tag: $TAG"
+            echo "Package version: $VERSION"
+            test "$VERSION" = "$TAG"
+
+  deploy-package:
+    docker:
+      - image: python:3-buster
+        auth: *docker-hub-auth
+    steps:
+      - checkout
+      - poetry-install
+      - run:
+          name: Publish wheel & sdist to PyPI
+          command: |
+            poetry publish --build --username "__token__" --password "$PYPI_API_TOKEN" --no-interaction
+
 workflows:
   version: 2
   commit:
@@ -54,3 +82,20 @@ workflows:
       - lint:
           context:
             - docker-hub-creds
+
+  release-onnigiri:
+    jobs:
+      - validate-version-with-tag:
+          context:
+            - docker-hub-creds
+          filters: &release-filter
+            tags:
+              only: /^onnigiri-[0-9]+(\.[0-9]+){2}((a|b|rc)[0-9]+)?(.post[0-9])?(.dev[0-9])?$/
+            branches:
+              ignore: /.*/
+      - deploy-package:
+          context:
+            - docker-hub-creds
+          requires:
+            - validate-version-with-tag
+          filters: *release-filter
