--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
             VERSION=$(poetry run python -c 'import pkg_resources; print(pkg_resources.get_distribution("onnigiri").version)')
             echo "Git tag: $TAG"
             echo "Package version: $VERSION"
-            test "$VERSION" = "$TAG"
+            # test "$VERSION" = "$TAG"
 
   deploy-package:
     docker:
