--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,12 @@ onnx = "^1.9.0"
 onnx-simplifier = "^0.3.6"
 
 [tool.poetry.dev-dependencies]
-pysen = {version = "^0.9.1", extras = ["lint"]}
+pysen = {version = "^0.10.1"}
+black = "21.10b0"
+flake8 = "4.0.1"
+flake8-bugbear = "21.9.2"
+isort = "5.9.3"
+mypy = "0.812"
 
 [tool.poetry.scripts]
 onnigiri = "onnigiri.main:main"
@@ -24,7 +29,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pysen]
-version = "0.9"
+version = "0.10"
 
 [tool.pysen.lint]
 enable_black = true
