--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+references:
+  onnigiri-ci-base-image: &onnigiri-ci-base-image "python:3.9-bullseye"
+
 commands:
   install-python-dev-tools:
     steps:
@@ -17,8 +20,8 @@ commands:
       - run:
           name: install poetry && poetry install
           command: |
-            curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-            echo 'export PATH=$HOME/.poetry/bin:$PATH' >> $BASH_ENV
+            curl -sSL https://install.python-poetry.org | python -
+            echo 'export PATH=$HOME/.local/bin:$PATH' >> $BASH_ENV
             source $BASH_ENV
             poetry config virtualenvs.in-project true
             poetry install
@@ -26,13 +29,11 @@ commands:
           key: *cache-key-poetry
           paths:
             - ".venv"
-            - "/usr/local/bin"
-            - "/usr/local/lib/python*/site-packages"
 
 jobs:
   lint:
     docker:
-      - image: python:3-buster
+      - image: *onnigiri-ci-base-image
         auth: &docker-hub-auth
           username: $DOCKER_USER
           password: $DOCKER_PASS
@@ -46,7 +47,7 @@ jobs:
 
   validate-version-with-tag:
     docker:
-      - image: python:3-buster
+      - image: *onnigiri-ci-base-image
         auth: *docker-hub-auth
     steps:
       - checkout
@@ -62,7 +63,7 @@ jobs:
 
   deploy-package:
     docker:
-      - image: python:3-buster
+      - image: *onnigiri-ci-base-image
         auth: *docker-hub-auth
     steps:
       - checkout
