--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,9 @@ jobs:
             poetry run make -C ssd check
 
   build-dockerimage:
+    parameters:
+      release:
+        type: boolean
     docker:
       - image: nixos/nix:2.8.1
         auth: &docker-hub-auth
@@ -78,14 +81,14 @@ jobs:
           password: $DOCKER_PASS
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            - nix-cache-{{ checksum "flake.lock" }}-{{ checksum "flake.nix" }}
+            - nix-cache-{{ checksum "flake.lock" }}
       - run:
           name: Build docker image
           command: |
             nix --experimental-features 'nix-command flakes' build '.#dockerimage' -o image -L
-      - run:
-          name: Debug info
-          command: |
-            ls -lh
       - setup_remote_docker:
           version: 20.10.7
       - run:
@@ -97,10 +100,36 @@ jobs:
           name: Load image
           command: |
             docker load < ./image
-      - run:
-          name: Debug info
-          command: |
-            docker images
+      - when:
+          condition: << parameters.release >>
+          steps:
+            - run:
+                name: Change image tag
+                command: |
+                  TAG=$(echo ${CIRCLE_TAG} |sed -e 's/onnigiri-//')
+                  docker tag idein/onnigiri:latest idein/onnigiri:released
+                  docker tag idein/onnigiri:latest idein/onnigiri:${TAG}
+            - run:
+                name: Push image
+                command: |
+                  docker push idein/onnigiri:released
+                  docker push idein/onnigiri:${TAG}
+      - unless:
+          condition: << parameters.release >>
+          steps:
+            - run:
+                name: Change image tag
+                command: |
+                  docker tag idein/onnigiri:latest idein/onnigiri:build-${CIRCLE_BUILD_NUM}
+            - run:
+                name: Push image
+                command: |
+                  docker push idein/onnigiri:latest
+                  docker push idein/onnigiri:build-${CIRCLE_BUILD_NUM}
+      - save_cache:
+          key: nix-cache-{{ checksum "flake.lock" }}-{{ checksum "flake.nix" }}
+          paths:
+            - /nix/store
 
 
   validate-version-with-tag:
@@ -142,6 +171,7 @@ workflows:
           context:
             - docker-hub-creds
       - build-dockerimage:
+          release: false
           context:
             - docker-hub-creds
 
@@ -160,4 +190,9 @@ workflows:
             - docker-hub-creds
           requires:
             - validate-version-with-tag
+          filters: *release-filter
+      - build-dockerimage:
+          release: true
+          context:
+            - docker-hub-creds
           filters: *release-filter
