--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ onnx-simplifier = "^0.3.6"
 
 [tool.poetry.dev-dependencies]
 pysen = {version = "^0.10.1"}
-black = "21.10b0"
+black = "22.3.0"
 flake8 = "4.0.1"
 flake8-bugbear = "21.9.2"
 isort = "5.9.3"
