--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ repository = "https://github.com/Idein/onnigiri"
 [tool.poetry.dependencies]
 python = "^3.7"
 onnx = "^1.9.0"
-onnx-simplifier = "^0.3.6"
+onnxruntime = "^1.2.0"
+onnx-simplifier = "^0.4"
 
 [tool.poetry.dev-dependencies]
 pysen = {version = "^0.10.1"}
