--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ commands:
             echo 'export PATH=$HOME/.local/bin:$PATH' >> $BASH_ENV
             source $BASH_ENV
             poetry config virtualenvs.in-project true
-            poetry install
+            poetry install --no-ansi
       - save_cache:
           key: *cache-key-poetry
           paths:
