Fix circleci workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
       release:
         type: boolean
     docker:
-      - image: nixos/nix:2.8.1
+      - image: *onnigiri-ci-base-image
         auth: &docker-hub-auth
           username: $DOCKER_USER
           password: $DOCKER_PASS
@@ -88,20 +88,14 @@ jobs:
       TZ: "JST-9"
     steps:
       - checkout
-      - run:
-          name: Build docker image
-          command: |
-            nix --experimental-features 'nix-command flakes' build '.#dockerimage' -o image -L
+      - poetry-install
       - setup_remote_docker
-      - run:
-          name: Install docker client
-          command: |
-            nix-env -iA nixpkgs.docker-client
       - docker-login
       - run:
-          name: Load image
+          name: Build image
           command: |
-            docker load < ./image
+            poetry build
+            docker build --build-arg VERSION=$(poetry version -s) -t idein/onnigiri:latest .
       - when:
           condition: << parameters.release >>
           steps:
@@ -140,7 +134,7 @@ jobs:
           name: Check if git tag name is appropriate for package version
           command: |
             TAG=$(echo ${CIRCLE_TAG} |sed -e 's/onnigiri-//')
-            VERSION=$(poetry run python -c 'import pkg_resources; print(pkg_resources.get_distribution("onnigiri").version)')
+            VERSION=$(poetry version -s)
             echo "Git tag: $TAG"
             echo "Package version: $VERSION"
             test "$VERSION" = "$TAG"
