--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,8 @@ jobs:
     steps:
       - checkout
       - poetry-install
-      - setup_remote_docker
+      - setup_remote_docker:
+          docker_layer_caching: true
       - docker-login
       - run:
           name: Build image
