--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,18 @@ commands:
             echo 'export PATH=$HOME/.local/bin:$PATH' >> $BASH_ENV
             source $BASH_ENV
             poetry config virtualenvs.in-project true
-            poetry install --no-ansi
+            poetry install --no-ansi --all-groups
       - save_cache:
           key: *cache-key-poetry
           paths:
             - ".venv"
+  install-docker-cli:
+    steps:
+      - run:
+          name: Install Docker CLI
+          command: |
+            apt-get update
+            apt-get install -y --no-install-recommends docker.io
   docker-login:
     steps:
       - run:
@@ -89,8 +96,8 @@ jobs:
     steps:
       - checkout
       - poetry-install
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - install-docker-cli
+      - setup_remote_docker
       - docker-login
       - run:
           name: Build image
